Switch authentication system to passport with jwt (local and google)

--- a/views/authViews/auth.ejs
+++ b/views/authViews/auth.ejs
@@ -1,11 +1,13 @@
 <%- include('../partials/header'); %>
   <main>
-    <h3>Please sign up or log in with existing credentials</h3>
+    <h3>Please sign up or log in with:</h3>
     <br><br>
-    <span><a class="btn" href="/auth/signup">Sign up as new user</a></span>
+    <span><a class="btn" href="/auth/google">Google</a></span>
     <br><br>
-    <span><a class="btn" href="/auth/login">Log in with existing credentials</a></span>
+    <span><a class="btn" href="/auth/signup">Local signup</a></span>
     <br><br>
+    <span><a class="btn" href="/auth/login">Local login</a></span>
+    <br><br><br>
     <span><a class="btn" href="/">Go back to main menu</a></span>
   </main>
 <%- include('../partials/footer'); %>
