--- a/views/tipViews/getTips.ejs
+++ b/views/tipViews/getTips.ejs
@@ -28,7 +28,7 @@
               <tr><td>Average rating: <%= tip.averageRating %></td></tr>
             <% } %>
           </table>
-          <a class="btn" href="<%= path %>/<%= tip._id %>/<%= tip.slug %>">Read tip</a>
+          <a class="btn" href="<%= path %>/<%= tip.id %>/<%= tip.slug %>">Read tip</a>
         </div>
         <br><br>
       <% } %>
