--- a/views/tipViews/tipsOverview.ejs
+++ b/views/tipViews/tipsOverview.ejs
@@ -25,7 +25,7 @@
       <br>
       <span>
         <a class="btn" href="/tips-overview/new-tip-form">Share my guitar tips</a>
-        <a class="btn" href="/tips-overview/tips?author=<%= currentUser._id %>">View my published tips</a>
+        <a class="btn" href="/tips-overview/tips?authorId=<%= currentUser.id %>">View my published tips</a>
       </span>
       <% } %>
     <br><br><br>
