--- a/views/userViews/getUsers.ejs
+++ b/views/userViews/getUsers.ejs
@@ -29,7 +29,7 @@
             <tr><td>Status: <%= user.status %></td></tr>
             <tr><td>Role: <%= user.role %></td></tr>
           </table>
-          <a class="btn" href="<%= path %>/<%= user._id %>/<%= user.slug %>">View user page</a>
+          <a class="btn" href="<%= path %>/<%= user.id %>/<%= user.slug %>">View user page</a>
         </div>
         <br><br>
       <% } %>
