--- a/views/userViews/updateUser.ejs
+++ b/views/userViews/updateUser.ejs
@@ -40,7 +40,7 @@
       <button>Update user password</button>
     </form>
     <br><br>
-    <span><a class="btn" href="/user-management/users/<%= user._id %>/<%= user.slug %>">Go back to the user page</a></span>
+    <span><a class="btn" href="/user-management/users/<%= user.id %>/<%= user.slug %>">Go back to the user page</a></span>
   </main>
 
   <script type="module" src="/js/userScripts/updateUser.js"></script>
