Improve error handling on both back and front end

--- a/views/userViews/createUser.ejs
+++ b/views/userViews/createUser.ejs
@@ -16,8 +16,9 @@
           <input type="radio" id="user" name="role" value="user" checked>
           <label for="user">User</label>
           <input type="radio" id="admin" name="role" value="admin">
-          <label for="admin">Admin</label>        
+          <label for="admin">Admin</label>
         </span>
+        <div class="role error"></div>
       </div>
       <button>Create new user</button>
     </form>
