--- a/views/tipViews/getTip.ejs
+++ b/views/tipViews/getTip.ejs
@@ -45,7 +45,7 @@
         <% } %>
       </div>
     <% } %>
-    <% if (currentUser && notRated && (!tip.authorId || tip.authorId !== currentUser.id)) { %>
+    <% if (notRated) { %>
       <br><br>
       <p>Rate this tip:</p>
       <form class="custom util rating form">
